fixed bug on mobile

--- a/src/app/containers/homepage/homepage.component.css
+++ b/src/app/containers/homepage/homepage.component.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.cdnfonts.com/css/conthrax");
 
+.mat-drawer-inner-container::-webkit-scrollbar {
+  display: none;
+}
 .nav-opener {
   color: black !important;
 }
@@ -7,8 +10,8 @@
   position: absolute;
   top: 4rem;
   bottom: 0;
-  left: 18rem;
-  right: 18rem;
+  left: 19rem;
+  right: 19rem;
   background-color: #eff7ff;
 }
 
@@ -119,11 +122,6 @@
     background-color: #eff7ff;
   }
 
-  .sidenavbar {
-    background-color: #eff7ff;
-    overflow: hidden !important;
-  }
-
   .logo {
     font-family: "conthrax";
     font-size: 1rem;
@@ -136,10 +134,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 0.1rem;
-    padding-right: 1rem;
+    padding: 0 0.5rem;
     background-color: #5cadfe;
-    height: 2.5rem;
+    height: 4rem;
     box-shadow: 2px 2px 10px 2px rgb(198, 193, 193);
   }
 
