--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,6 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+.mat-drawer-inner-container::-webkit-scrollbar {
+  display: none;
+}
